2004-01-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Reflect changes to
	../support/*exception_processing/*.

2004-01-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add nostdinc to AUTOMAKE_OPTIONS.
	Add RTEMS_PROG_CCAS.

2004-01-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add PREINSTALL_DIRS.
	* irq/Makefile.am: Add PREINSTALL_DIRS.
	* vectors/Makefile.am: Add PREINSTALL_DIRS.
	* wrapup/Makefile.am: Reflect changes to libcpu.

2004-01-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Re-add dirstamps to PRE/TMPINSTALL_FILES.
	Add PRE/TMPINSTALL_FILES to CLEANFILES.
	* irq/Makefile.am: Ditto.
	* startup/Makefile.am: Ditto.
	* vectors/Makefile.am: Ditto.

2004-01-05	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate $(LIB). 
	Use noinst_DATA to trigger building libbsp.a.

2003-12-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Eliminate VPATH.
	* console/Makefile.am: Eliminate VPATH.
	* ide/Makefile.am: Eliminate VPATH.
	* irq/Makefile.am: Eliminate VPATH.
	* network/Makefile.am: Eliminate VPATH.
	* startup/Makefile.am: Eliminate VPATH.

2003-12-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	PR 545/bsps
	* startup/setvec.c: Removed.

2003-12-13	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: s,${PROJECT_RELEASE}/lib,$(PROJECT_LIB),g.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* irq/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* startup/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.
	* vectors/Makefile.am: Use mkdir_p. Remove dirs from PRE/TMPINSTALL_FILES.

2003-12-12	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Require automake >= 1.8, autoconf >= 2.59.

2003-12-09	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Misc cleanups and fixes.
	* startup/Makefile.am: Misc cleanups and fixes.