@@ -1,38 +1,0 @@
-##
-## $Id$
-##
-
-C_FILES = irq.c irq_init.c
-OBJS = $(C_FILES:%.c=$(ARCH)/%.$(OBJEXT))
-
-include_bspdir = $(includedir)/bsp
-include_bsp_HEADERS = irq.h
-
-S_FILES = irq_asm.S
-OBJS += $(S_FILES:%.S=$(ARCH)/%.$(OBJEXT))
-
-include $(top_srcdir)/../../../../automake/compile.am
-include $(top_srcdir)/../../../../automake/lib.am
-
-noinst_DATA = $(OBJS)
-
-all-local: $(PREINSTALL_FILES)
-
-EXTRA_DIST = irq.c irq_asm.S irq_init.c
-
-PREINSTALL_DIRS =
-PREINSTALL_FILES =
-
-$(PROJECT_INCLUDE)/bsp/$(dirstamp):
-	@$(mkdir_p) $(PROJECT_INCLUDE)/bsp
-	@: > $(PROJECT_INCLUDE)/bsp/$(dirstamp)
-PREINSTALL_DIRS += $(PROJECT_INCLUDE)/bsp/$(dirstamp)
-
-$(PROJECT_INCLUDE)/bsp/irq.h: irq.h $(PROJECT_INCLUDE)/bsp/$(dirstamp)
-	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/bsp/irq.h
-PREINSTALL_FILES += $(PROJECT_INCLUDE)/bsp/irq.h
-
-CLEANFILES = $(PREINSTALL_FILES)
-DISTCLEANFILES = $(PREINSTALL_DIRS)
-
-include $(top_srcdir)/../../../../automake/local.am
